<resources>
    <string name="app_name">Driving schedule</string>
    <string name="title">Calender</string>
    <string name="day1">Sunday</string>
    <string name="day2">Monday</string>
    <string name="day3">Tuesday</string>
    <string name="day4">Wednesday</string>
    <string name="day5">Thursday</string>
    <string name="day6">Friday</string>
    <string name="day7">Saturday</string>
    <string name="hour1">6:</string>
    <string name="hour2">7:</string>
    <string name="hour3">8:</string>
    <string name="hour4">9:</string>
    <string name="hour5">10:</string>
    <string name="hour6">11:</string>
    <string name="hour7">12:</string>
    <string name="hour8">13:</string>
    <string name="hour9">14:</string>
    <string name="hour10">15:</string>
    <string name="hour11">16:</string>
    <string name="hour12">17:</string>
    <string name="hour13">18:</string>
    <string name="hour14">19:</string>
    <string name="hour15">20:</string>
    <string name="hour16">21:</string>
    <string name="hour17">22:</string>
    <string name="hour18">23:</string>
    <string name="hour19">24:</string>
    <string name="CurrentUser">Current User: </string>
    <string name="nava">Nava</string>
    <string name="ofer">Ofer</string>
    <string name="roee">Roee</string>
    <string name="keren">Keren</string>
    <string name="aviv">Aviv</string>
    <string name="delete">Delete</string>
    <string name="username">Choose User Name:</string>
    <string name="save">Tap Here To Save</string>
    <string name="rate">Need another car</string>
</resources>